<resources>
    <string name="app_name">VHP Service App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_terminal">Terminal</string>
    <string name="nav_sensors">Sensors</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Terminal</item>
        <item>Sensors</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="action_logout">Logout</string>

    <string name="home_status_none">No device connected</string>
    <string name="home_status_attached">Device found</string>
    <string name="home_status_detached">Device detached</string>
    <string name="home_status_denied">Permission denied</string>

    <string name="terminal_command_default">^json device</string>
    <string name="terminal_button_send">Send</string>

    <string name="sensors_airin">Air in: </string>
    <string name="sensors_airout">Air out: </string>
    <string name="sensors_chreturn">CH return: </string>
    <string name="sensors_chsupply">CH supply: </string>
    <string name="sensors_hotgas">Hotgas: </string>
    <string name="sensors_evap">Evap: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_terminal_fragment">Hello terminal fragment</string>
    <string name="hello_sensors_fragment">Hello sensors fragment</string>
</resources>
